# argusorch

./: .editorconfig  .gitattributes  .gitignore  FEATURES.md  README.md  main.py  pyproject.toml  train_code_collab.py
argusorch/: __init__.py
argusorch/agents/: __init__.py  actors_group.py  critic.py  llm_actor.py  prompt_builder.py  types.py
argusorch/env/: __init__.py  rollout_collector.py  text_env.py  trajectory.py  types.py
argusorch/trainers/: __init__.py
argusorch/trainers/common/: __init__.py  loggers.py  replay_buffer.py  target_estimation.py  types.py
argusorch/trainers/maac/: __init__.py  losses.py  target_esimation.py  trainer.py  updater.py
experiments/: long_horizon.ipynb  standard_horizon.ipynb  train_td_comparison_long_horizon.ipynb  train_td_comparison_long_horizon.py  train_td_comparison_standard.ipynb  train_td_comparison_standard.py
