[project]
name = "ArgusOrch"
version = "0.1.0"
description = "CTDE MARL learning algorithm for LLM-based agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.0.0",
    "peft>=0.5.0",
    "wandb>=0.27.0",
]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | build
)/
'''
